<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SplashArtFragment">

    <TextView
        android:id="@+id/InfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/splash_info_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LoadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/SplashImage"
        app:layout_constraintEnd_toEndOf="@+id/SplashImage"
        app:layout_constraintStart_toStartOf="@+id/SplashImage"
        app:layout_constraintTop_toBottomOf="@+id/InfoText" />

    <ImageView
        android:id="@+id/SplashImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/InfoText" />

    <AutoCompleteTextView
        android:id="@+id/GuessText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/type_champion_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SplashImage" />

    <Button
        android:id="@+id/GuessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GuessText" />

    <ImageButton
        android:id="@+id/SolveButton"
        android:layout_marginTop="24dp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/solve"
        android:background="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/GuessButton"
        app:layout_constraintTop_toBottomOf="@id/GuessText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/GuessRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GuessButton" />

</androidx.constraintlayout.widget.ConstraintLayout>